integration_tests/codegen_fail/fail/interface/struct/derive_implementers_duplicate_pretty.stderr
error: duplicated attribute argument found
  --> fail/interface/struct/derive_implementers_duplicate_pretty.rs:10:24
   |
10 | #[graphql(for = [ObjA, ObjA])]
   |                        ^^^^

error[E0412]: cannot find type `CharacterValue` in this scope
 --> fail/interface/struct/derive_implementers_duplicate_pretty.rs:4:18
  |
4 | #[graphql(impl = CharacterValue)]
  |                  ^^^^^^^^^^^^^^ not found in this scope
